force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/RTL_Lead_Assignment_Rule__c.object-meta.xml
<CustomObject>
    <description>For setup condition for assign owner to Lead when created.</description>
    <label>Lead Assignment</label>
    <nameField>
        <displayFormat>RTLLA-{000000}</displayFormat>
        <label>Lead Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>