force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/fields/RTL_Assigned_Apex__c.field-meta.xml
<CustomField>
    <fullName>RTL_Assigned_Apex__c</fullName>
    <label>1.1 Assign by Apex function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RTL_AssignmentCriteriaService</fullName>
            </value>
            <value>
                <fullName>RTL_ReferAssignmentService</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>