force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/fields/RTL_Assigned_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Assigned_Queue_Name__c</fullName>
    <description>Developer Queue Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use developer name for assigned to Queue.</inlineHelpText>
    <label>3.1 Assigned Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>