force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/fields/RTL_Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>RTL_Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2.1 Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_User</relationshipName>
    <type>Lookup</type>
</CustomField>