force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/fields/RTL_Assigned_User_field__c.field-meta.xml
<CustomField>
    <fullName>RTL_Assigned_User_field__c</fullName>
    <label>2.2 Assigned User field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OwnerId</fullName>
            </value>
            <value>
                <fullName>Referred_Staff__c</fullName>
            </value>
            <value>
                <fullName>RTL_Employee_ID__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>