force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/fields/RTL_Branch_and_Zone_Queue_User_field__c.field-meta.xml
<CustomField>
    <fullName>RTL_Branch_and_Zone_Queue_User_field__c</fullName>
    <description>Check from field RTL_Branch_Name</description>
    <inlineHelpText>Get the value from RTL_Branch_Name__c.</inlineHelpText>
    <label>3.2 Branch and Zone Queue/User field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BB_Queue_Name__c</fullName>
            </value>
            <value>
                <fullName>SE_Queue_Name__c</fullName>
            </value>
            <value>
                <fullName>Branch_Queue_Name__c</fullName>
            </value>
            <value>
                <fullName>RMC_User__c</fullName>
            </value>
            <value>
                <fullName>RTL_Wealth_RM_User__c</fullName>
            </value>
            <value>
                <fullName>RTL_Branch_Manager_User__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>