force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/fields/RTL_Default_User__c.field-meta.xml
<CustomField>
    <fullName>RTL_Default_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>4.2 Default User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Default_User</relationshipName>
    <type>Lookup</type>
</CustomField>