force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/fields/RTL_Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_Integration_Type__c</fullName>
    <description>Values: &quot;Cisco&quot;, &quot;Avaya&quot;</description>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Avaya</fullName>
                <isActive>false</isActive>
                <label>Avaya</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>