force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/fields/RTL_IsAssign_Campaign__c.field-meta.xml
<CustomField>
    <fullName>RTL_IsAssign_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Update to field RTL_IsAssign_Campaign__c in object Lead.</description>
    <label>Is Assign Campaign</label>
    <type>Checkbox</type>
</CustomField>