force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/fields/RTL_IsInsertProduct__c.field-meta.xml
<CustomField>
    <fullName>RTL_IsInsertProduct__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use this flag to clarify is auto create interested product</description>
    <inlineHelpText>Use product from lead field RTL_Product_name</inlineHelpText>
    <label>Is Create Interested Product</label>
    <type>Checkbox</type>
</CustomField>