force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/fields/RTL_Lead_Field_Criteria_2__c.field-meta.xml
<CustomField>
    <fullName>RTL_Lead_Field_Criteria_2__c</fullName>
    <label>Lead Field Criteria 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RTL_Contact_Method__c</fullName>
            </value>
            <value>
                <fullName>LeadSource</fullName>
            </value>
            <value>
                <fullName>RTL_TMB_Campaign_Source__c</fullName>
            </value>
            <value>
                <fullName>RTL_TMB_Campaign_Reference__c</fullName>
            </value>
            <value>
                <fullName>RTL_Customer_Segment__c</fullName>
            </value>
            <value>
                <fullName>RTL_Owner_Type__c</fullName>
            </value>
            <value>
                <fullName>RTL_Product_Name__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>