force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/fields/RTL_Lead_Field_Value_2__c.field-meta.xml
<CustomField>
    <fullName>RTL_Lead_Field_Value_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Possible value for this field are
1) Is null
2) Is not null
3) Field Value (always using &apos;=&apos; operator)
4) TRUE /FALSE for checkbox field</inlineHelpText>
    <label>Lead Field Value 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>