force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/fields/RTL_Lead_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_Lead_Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Account</fullName>
            </value>
            <value>
                <fullName>Commercial Completed</fullName>
            </value>
            <value>
                <fullName>Commercial Lead</fullName>
            </value>
            <value>
                <fullName>Retail Banking</fullName>
                <default>true</default>
                <label>Retail Banking</label>
            </value>
            <value>
                <fullName>Retail Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>