force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/fields/RTL_Priority__c.field-meta.xml
<CustomField>
    <fullName>RTL_Priority__c</fullName>
    <label>Priority</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>