force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/validationRules/Allow_Only_One_Default_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Allow_Only_One_Default_Field</fullName>
    <active>true</active>
    <description>Allow only 1 field to be populated</description>
    <errorConditionFormula>AND( NOT(ISBLANK(RTL_Default_Queue_Name__c)) , NOT(ISBLANK(RTL_Default_User__c)))</errorConditionFormula>
    <errorMessage>Please input only 1 value from 4.1, 4.2</errorMessage>
</ValidationRule>