force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/listViews/Active_Rule.listView-meta.xml
<ListView>
    <fullName>Active_Rule</fullName>
    <columns>NAME</columns>
    <columns>RTL_Priority__c</columns>
    <columns>RTL_Active_Flag__c</columns>
    <columns>RTL_Integration_Type__c</columns>
    <columns>RTL_IsAssign_Campaign__c</columns>
    <columns>RTL_Lead_Record_Type__c</columns>
    <columns>RTL_Lead_Field_Criteria_1__c</columns>
    <columns>RTL_Lead_Field_Value_1__c</columns>
    <columns>RTL_Lead_Field_Criteria_2__c</columns>
    <columns>RTL_Lead_Field_Value_2__c</columns>
    <columns>RTL_Lead_Field_Criteria_3__c</columns>
    <columns>RTL_Lead_Field_Value_3__c</columns>
    <columns>RTL_Assigned_Apex__c</columns>
    <columns>RTL_Assigned_User__c</columns>
    <columns>RTL_Branch_and_Zone_Queue_User_field__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RTL_Active_Flag__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Rule</label>
    <language>en_US</language>
</ListView>