force-app/main/default/objects/RTL_Lead_Assignment_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RTL_Priority__c</columns>
    <columns>RTL_Active_Flag__c</columns>
    <columns>RTL_Integration_Type__c</columns>
    <columns>RTL_IsAssign_Campaign__c</columns>
    <columns>RTL_Lead_Record_Type__c</columns>
    <columns>RTL_Lead_Field_Criteria_1__c</columns>
    <columns>RTL_Lead_Field_Value_1__c</columns>
    <columns>RTL_Lead_Field_Criteria_2__c</columns>
    <columns>RTL_Lead_Field_Value_2__c</columns>
    <columns>RTL_Lead_Field_Criteria_3__c</columns>
    <columns>RTL_Lead_Field_Value_3__c</columns>
    <columns>RTL_Lead_Field_Criteria_4__c</columns>
    <columns>RTL_Lead_Field_Value_4__c</columns>
    <columns>RTL_Assigned_Queue_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RTL_Active_Flag__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>